# bga

./: .gitignore  pyproject.toml  setup.cfg  setup.py
bga/common/: exceptions.py  files.py  measures.py
bga/scraping/: config.py  container.py  example.py  fetching.py  logging.py  scraper.py  spider.py  url_tester.py  xpaths.py
bga/shop_scraping/: config.py  example.py  logging.py  page.py  serialization.py  storage.py
common/: __init__.py  asyncio.py  config.py  debugging.py  exceptions.py  files.py  functools.py  measures.py  page.py  page_model.py  texttools.py  urls.py
devops/: requirements.txt
shop_scraping/: config.py  example.py  fetching.py  logging.py  model.py  page.py  process.py  scraper.py  serialization.py  signals.py  spider.py  storage.py  texttools.py  url_tester.py
shop_scraping/example/: items.py  spider.py
shop_scrapping/: __main__.py  fetching.py  page.py  process.py  scrapy.cfg  settings.py
shop_scrapping/shop_scrapping/: items.py  middlewares.py  pipelines.py  settings.py
shop_scrapping/spiders/: base.py  planszomania.py
