# See PEP 518: https://www.python.org/dev/peps/pep-0518/ for info on this file's structure.

[tool.poetry]
name = "bga"
version = "0.1.0"
license = "Proprietary"
authors = ["lhaze <lhaze@lhaze.name>"]
description = ""
packages = [
    { include = "shop_scraping" },
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.8"
# core
bgap = { path = "../bgap/" }  # {git = "ssh://git@github.com/lhaze/bgap.git"}
python-clean-architecture = "^0.0.6"
parsel = "1.6.0"
ruia = {version = "~0.6.7"}  # , extras=["uvloop"]
blinker = "1.4"
click = "7.1.2"
python-path = "0.1.3"
"ruamel.yaml" = "0.16.10"
marshmallow = "^3.8.0"

[tool.poetry.dev-dependencies]
pip = "~20.1.1"
setuptools = "~47.1.1"
wheel = "~0.34.2"
pytest-flake8 = "^1.0.6"
mock = "^4.0.2"
ipython = "^7.18.1"
pdbpp = "^0.10.2"
black = "^20.8b1"

[tool.pytest.ini_options]
addopts = "--doctest-modules -s --flake8"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
doctest_optionflags= "ELLIPSIS NORMALIZE_WHITESPACE"
norecursedirs = [
    "__pypackages__/*",
    "scratch.py",
    "workbench.py",
]
